--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .afterlife-back {
-    background: linear-gradient(202deg, #0C1826 0%, #000 38.5%);
+    /*background: linear-gradient(202deg, #0C1826 0%, #000 38.5%);*/
+    background: linear-gradient(196deg, #341010 -10.52%, #0C1826 -1.38%, #000 26.76%);
 }
 
 .App-header {
