--- a/client/src/pages/Settings/Settings.module.css
+++ b/client/src/pages/Settings/Settings.module.css
@@ -1,69 +1,85 @@
+.settingsNav {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    margin-left: 2.6vw;
+}
+
 .container {
-    position: relative;
-    background: #0f0f0f;
+    /*position: relative;*/
+    /*background: #0f0f0f;*/
     padding-top: 25px;
-    min-height: 140vh;
+    min-height: 180vh;
+
     color: white;
     font-family: Nunito, sans-serif;
-    transition: 0.3s all ease;
 }
 
 .content {
-    width: 700px;
-    padding: 15px;
+    position: relative;
+    width: 27vw;
     margin: 0 auto;
-    background: #272727;
     border-radius: 25px;
     min-height: 100vh;
 }
-.adjust{
-    margin-left: 30px;
-}
-.content h2{
 
-    margin-bottom: 25px;
-    font-size: 21px;
-    font-weight: 600;
-}
-
-.uploadForm {
-    position: relative;
-    left: 78%;
-    margin-bottom: 50px;
-    margin-top: 10px;
+.avatarDesc h2, .linkAcc h2 {
+    color: #FFF;
+    font-family: Onest, sans-serif;
+    font-size: 1.25vw;
+    font-style: normal;
+    font-weight: 500;
+    padding: 0;
+    margin: 0 0 0.52vw;
 }
 
-.labelInputFile {
-    color: black;
-    background: white;
-    border: 1px solid #999;
-    border-radius: 25px;
-    padding: 15px 38px;
-    outline: none;
-    white-space: nowrap;
-    -webkit-user-select: none;
+.avatarDesc p, .linkAcc p {
+    color: rgba(255, 255, 255, 0.50);
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 0;
+    margin: 0 0 1.82vw;
+}
+
+
+.disabledButton {
+    display: flex;
+    height: 2.34375vw;
+    width: 6.40625vw;
+    justify-content: center;
+    align-items: center;
+    gap: 0.52vw;
+    border-radius: 0.9375vw;
+    background: rgba(106, 106, 118, 0.13);
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 500;
+    border: none;
+    margin-top: 1.82vw;
+}
+
+.saveButton {
+    display: flex;
+    height: 2.34375vw;
+    width: 6.40625vw;
+    justify-content: center;
+    align-items: center;
+    gap: 0.52vw;
+    border-radius: 0.9375vw;
+    background: rgba(106, 106, 118, 0.12);
+    color: #FFF;
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 500;
+    border: none;
     cursor: pointer;
-
-    font-weight: 700;
-    font-size: 10pt;
-    min-width: 125px;
-    transition: 0.5s all ease;
-}
-.disabledButton{
-    color: white;
-    background: #151517;
-    border: 1px solid #999;
-    border-radius: 25px;
-    padding: 15px 38px;
-    outline: none;
-    white-space: nowrap;
-    -webkit-user-select: none;
-    cursor: pointer;
-
-    font-weight: 700;
-    font-size: 10pt;
-    min-width: 125px;
-    transition: 0.5s all ease;
+    margin-top: 1.82vw;
 }
 
 .inputFile {
@@ -71,23 +87,20 @@
 }
 
 .labelInputFile:active {
-    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+
 }
 
 .photoPreview {
-    display: flex;
-    gap: 20px;
-    align-content: center;
+    width: 6.51vw;
 }
 
 .photoPreview p {
 
-    font-size: 20px;
 }
 
 .photoPreview img {
-    width: 100px;
-    height: 100px;
+    width: 5.2vw;
+    height: 5.2vw;
     object-fit: cover;
     border-radius: 100px;
 }
@@ -104,49 +117,387 @@
     padding: 5px;
     font-size: 25px;
 }
-.inputField{
-    width: 350px;
-    height: 60px;
-    background: #151517;
-    border: 1px solid #7dabc3;
-    border-radius: 12px;
-    font-size: 20px;
+
+.inputField {
+    width: 26vw;
+    height: 3.125vw;
+    background: transparent;
+    border-radius: 1.04vw;
+    border: 1.2px solid rgba(255, 255, 255, 0.10);
     color: #fff;
     padding-left: 15px;
-    font-family: Nunito, sans-serif;
+
+    color: rgba(255, 255, 255, 0.50);
+    font-family: Onest, sans-serif;
+    font-size: 0.9375vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    transition: 0.3s all ease;
 }
-.textField{
-    width: 350px;
-    height: 110px;
-    background: #151517;
-    border: 1px solid #7dabc3;
-    border-radius: 12px;
-    font-size: 20px;
+
+.inputField:focus,
+.inputField:active {
+    outline: none;
+    border: 1.2px solid rgba(255, 255, 255, 0.35);
+    transition: 0.3s all ease;
+}
+
+.inputField:disabled {
+    border: 1.2px solid rgba(255, 255, 255, 0.10);
+}
+
+.textField {
+    width: 26vw;
+    height: 6.77vw;
+    background: transparent;
+    border-radius: 1.04vw;
+    border: 1.2px solid rgba(255, 255, 255, 0.10);
     color: #fff;
     padding-left: 15px;
-    font-family: Nunito, sans-serif;
     padding-top: 10px;
+    color: rgba(255, 255, 255, 0.50);
+    font-family: Onest, sans-serif;
+    font-size: 0.9375vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    resize: none;
+    transition: 0.3s all ease;
 }
-.profileInfo{
+
+.textField:focus {
+    outline: none;
+    transition: 0.3s all ease;
+    border: 1px solid rgba(255, 255, 255, 0.35);
+}
+
+.textField:active {
+    outline: none;
+    border: 1px solid rgba(255, 255, 255, 0.35);
+    transition: 0.3s all ease;
+}
+
+.textField:disabled {
+    border: 1px solid rgba(255, 255, 255, 0.10);
+}
+
+.profileInfo {
     font-family: Nunito, sans-serif;
 }
-.profileInfo div{
+
+.name, .desc {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
 }
-.profileInfo button{
+
+.profileInfo button {
     position: relative;
     left: 78%;
 }
-.divSelectorGames{
+
+.profileInfo label {
+    color: #D9D9D9;
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 0.52vw;
+}
+
+.divSelectorGames {
     width: 400px;
 }
-.selectorGames{
+
+.selectorGames {
     color: black;
 }
-.btn{
-    margin-top: 30px;
+
+.btn {
+
+}
+
+.photoPreview {
     position: relative;
-    left: 78%;
+    margin-bottom: 1.3vw;
+}
+
+.photoPreview p {
+    font-size: 1.04vw;
+}
+
+.photoPreviewImg {
+    position: relative;
+    border-radius: 7.13vw;
+    border: 5px solid rgba(233, 233, 233, 0.05);
+    object-fit: cover;
+    transition: 0.5s all ease;
+}
+
+.photoBorder {
+    border-radius: 7.13vw;
+    border: 1px solid rgba(233, 233, 233, 0.05);
+    position: absolute;
+    top: 0;
+}
+
+.uploadForm {
+    position: absolute;
+    top: 31%;
+    left: -5%;
+    width: 6.51vw;
+
+}
+
+.labelInputFile {
+    height: 5.2vw;
+    min-width: 6.51vw;
+    transition: 0.5s all ease;
+    color: #79A1DD;
+    font-family: Onest, sans-serif;
+    font-size: 0.9375vw;
+    font-style: normal;
+    line-height: 145%; /* 26.1px */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    opacity: 0;
+    cursor: pointer;
+
+}
+
+.labelInputFile img {
+    width: 2.08vw;
+    height: 2.08vw;
+}
+
+.inputFile {
+    display: none;
+}
+
+.photoPreview:hover .photoPreviewImg {
+    opacity: 0.2;
+    transition: 0.5s all ease;
+}
+
+.photoPreview:hover .labelInputFile {
+    opacity: 1;
+    transition: 0.5s all ease;
+}
+
+.dataBlock {
+    display: flex;
+    justify-content: center;
+}
+
+.pheader {
+    color: #79A1DD;
+    text-align: center;
+    font-family: Onest, sans-serif;
+    font-size: 1.09375vw;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 145%; /* 34.8px */
+}
+
+.personal {
+    display: flex;
+    gap: 1.3vw;
+    color: #D9D9D9;
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    /*margin-bottom: 0.52vw;*/
+    margin-bottom: 1.82vw;
+}
+
+
+.dateOfBirth {
+
+}
+
+.toggleContainer {
+    display: flex;
+    align-items: center;
+    background-color: #080808;
+    border-radius: 1.04vw;
+    width: 6.09375vw;
+}
+
+.toggleButton {
+    flex: 1;
+    text-align: center;
+    height: 2.86vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    color: #D9D9D9 !important;
+    font-family: Onest, sans-serif;
+    font-size: 0.9375vw;
+    font-style: normal;
+
+    cursor: pointer;
+    border-radius: 1.04vw;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.selected {
+    background-color: #141417;
+}
+
+.dateField {
+    width: 13vw;
+    height: 2.86vw;
+    flex-shrink: 0;
+    border-radius: 0.9375vw;
+    border: none;
+    background-color: #080808;
+
+    color: #D9D9D9;
+    font-family: Onest, sans-serif;
+    font-size: 0.9375vw;
+    font-style: normal;
+    font-weight: 4500;
+    padding-left: 0.9375vw;
+    padding-right: 0.9375vw;
+}
+
+.lang {
+    color: #D9D9D9;
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.langBio {
+    display: flex;
+    gap: 0.52vw;
+}
+
+.langBioItem {
+    padding: 0.52vw 0.78125vw;
+    border-radius: 0.729vw;
+    background: rgba(255, 255, 255, 0.05);
+}
+
+.langBioItem p {
+    margin: 0;
+    color: #FFF;
+    font-family: Nunito Sans, sans-serif;
+    font-size: 0.9375vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 145%;
+}
+
+.search {
+    width: 26vw;
+    height: 3.125vw;
+    border-radius: 1.04vw;
+    border: 1px solid rgba(106, 106, 118, 0.12);
+    display: flex;
+    align-items: center;
+    gap: 0.875em;
+    padding-left: 0.9375vw;
+
+    color: rgba(255, 255, 255, 0.50);
+    font-family: Onest, sans-serif;
+    /*font-size: 1.05vw;*/
+    /*font-size: clamp(12px, 1.05vw, 16px);*/
+    font-size: 0.85vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 135%;
+    background: transparent;
+    transition: 0.3s all ease;
+    margin-top: 1.04vw;
+}
+
+.search img {
+    width: 1em;
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7500%) hue-rotate(256deg) brightness(113%) contrast(104%);
+}
+
+.langSelect {
+
+}
+
+.linkAcc {
+    margin-top: 2.08vw;
+}
+
+.social {
+
+}
+
+.socialDesc {
+    color: rgba(255, 255, 255, 0.50);
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.linkItem {
+    position: relative;
+
+    height: 3.125vw;
+    width: 26vw;
+
+    display: flex;
+    align-items: center;
+    /*justify-content: space-around;*/
+    /*gap: 11.5vw;*/
+    border-radius: 1.04vw;
+    background: rgba(106, 106, 118, 0.12);
+    padding-left: 1.3vw;
+}
+
+.linkItem img {
+    width: 1.3vw;
+    height: 1.3vw;
+}
+
+.socialName {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.52vw;
+    color: #D9D9D9;
+    font-family: Onest, sans-serif;
+    font-size: 0.9375vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.connectSocial {
+    position: absolute;
+    right: 0.5vw;
+
+}
+
+.connectSocial button {
+    width: 7.08vw;
+    height: 2.34375vw;
+
+    border-radius: 0.9375vw;
+    background: rgba(106, 106, 118, 0.12);
+
+    color: #FFF;
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 400;
+    border: none;
+    cursor: pointer;
 }
